[gd_scene load_steps=4 format=3 uid="uid://s1d41es15ac6"]

[ext_resource type="Script" uid="uid://bw28fce60uk8s" path="res://components/table/empty_header/empty_header.gd" id="1_54am1"]
[ext_resource type="PackedScene" uid="uid://bk2g2d2b07n18" path="res://components/table/column_separator/column_separator.tscn" id="2_b1wlf"]
[ext_resource type="PackedScene" uid="uid://bho6y3fvnxca0" path="res://components/table/empty_menu/empty_menu.tscn" id="3_4t6hq"]

[node name="EmptyHeader" type="HBoxContainer"]
offset_right = 72.0
offset_bottom = 32.0
script = ExtResource("1_54am1")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CenterContainer"]
custom_minimum_size = Vector2(64, 32)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColumnSeparator" parent="." node_paths=PackedStringArray("column") instance=ExtResource("2_b1wlf")]
layout_mode = 2
column = NodePath("..")

[node name="EmptyMenu" parent="." instance=ExtResource("3_4t6hq")]
visible = false
unfocusable = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="id_pressed" from="EmptyMenu" to="." method="_on_empty_menu_id_pressed"]
